Allow JarProcessors to supply a cache key, misc cleanup & logging